Updating to reflect real site
changed title, turned several tooltips into comments

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: My Own Private Idaho
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: A place for writing, art, and other multimedia. Maxwell Kline lives here. The rent is a little under 6 bucks a year.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
