--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ description: A place for writing, art, and other multimedia. Maxwell Kline lives
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
+author: Maxwell Kline
